# wai.native.wator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  crawler.run.app.sh  ostrich.run.app.sh  parrot.run.app.sh  run.crawler.app.sh  unihan.js
browser-js/: cjk.js  cjk.json  graph.html  graph.js  ipfs.reader.js  wai.base.js  wai.crystal.js  wai.entry.js  wai.hash.js  wai.html  wai.parrot.js  wai.vue.ui.js
dataset/tools/hashArchive/: collect-block.js  conv.docker-compose.yml  conv_sha1_2_hash.js  deep.docker-compose.yml  deep.js  package.json
dataset/tools/ipfs-crawler/: config.js  docker-compose.yml  sub.api.js  test.api.js
dataset/tools/ipfs-service/: config.js  docker-compose.yml  test-docker-compose.yml
dataset/tools/ipfs-service/conf-ipfs/: init.sh
dataset/tools/ipfs-wikidump/: cnwiki.js  cnwiki.sh  cnwiktionary.js  ipfs-cnwiki.js  ipfs-level.js  ipfs-save.js  ipfs-test.js  jawiki.sh  jawiktionary.js  package.json  parseWikiDumper.js  show.level.js  unihan.js  unihan_ja_roma.js  wai.zhwiki.service  zhwiki.sh
dataset/tools/nodetools/: cn.mozillazg.leveldb.js  cn.multi.hanzi.leveldb.js  ctrl.all.leveldb.js  ja_ext.phoneme.leveldb.js  merge.level.js  show.leveldb.js  view.leveldb.js
dataset/tools/repo-ipfs-wiki/: .gitignore  cnwiki.sh  collect-block.js  collect-cid-level.js  collect-level.js  entry.sh  find_block.js  fs-save-docker-compose.yml  ipfs-cnwiki-collect-resource.js  ipfs-cnwiki.js  ipfs-jawiki-collect-resource.js  ipfs-jawiki-dictionary.js  ipfs-level.js  ipfs-levelfs.js  ipfs-main.js  ipfs-save.js  ipfs-test.js  package.json  parseWikiDumper.js  save-docker-compose.yml  wai.cnwiki.service
dataset/tools/repo-ipfs-wiki/app/: entry.sh  package.json
dataset/tools/repo-ipfs-wiki/cnwiki-ipfs/: add.file.sh  docker-compose.yml  init.repos.sh
dataset/tools/repo-ipfs-wiki/fs-app/: package.json
dataset/tools/unicode/: cjk.js  furikana.js  furikana.json  gen.app.js  orig.unicode.js  unicode.js
dataset/tools/wiktionary/: package.json  wai.wiktionary.ja_kan.service  wikiDictJa.js
ipfs-crawler/: app.js  baidunew.js  cn_dict.js  config.js  docker-compose.yml  dry-run.app.js  lsfs.api.js  name.api.js  package-lock.json  package.json  pub.api.js  show_ipfs.js  sub.api.js  swarm.api.js  test.dht.api.js  wikiDict.js  wikiDictJa.js  wikiPedia.js
ipfs-service/: .gitignore  config.js  create-docker-compose.yml  create.ipfs.sh  docker-compose.yml  init-docker-compose.yml  package-lock.json  test-docker-compose.yml
ipfs-service/conf-ipfs/: init.sh  test.sh
ipfs-service/conf-nginx/: default.conf  nginx.conf
ipfs-service/conf-nginx/tcp.conf.d/: default.conf
ipfs-tools/: ostrich.cpp  parrot.cpp
ipfs-wikidump/: cnwiki.js  cnwiki.sh  cnwiktionary.js  furikan.json  ipfs-cnwiki-collect-resource.js  ipfs-cnwiki.js  ipfs-jawiki-collect-resource.js  ipfs-jawiki-dictionary.js  ipfs-jawiki.js  ipfs-wiki-collect-resource.js  jawiki.js  jawiki.sh  jawiktionary.js  jawiktionaryParser.js  package-lock.json  package.json  parseWikiDumper.js  show.dict.js  unihan.js  unihan_ja_roma.js  wai.cnwiki.service  wai.jawiki.service  wai.zhwiki.service  zhwiki.js  zhwiki.sh  zhwiktionary.js
nodetools/: cn.hanzi.leveldb.js  cn.mozillazg.leveldb.js  cn.multi.hanzi.leveldb.js  cn.phoneme.leveldb.js  ctrl.all.leveldb.js  ja.hirakana.leveldb.js  ja.hirakana2.leveldb.js  ja.phoneme.leveldb.js  ja_ext.phoneme.leveldb.js  merge.level.js  multiHanZiDB.json  phoneme.leveldb.js  show.leveldb.js  view.leveldb.js
tools/: castdb.cpp  ceph_sync.cpp  collect.cpp  conf.json  crawler.cpp  display.cpp  joint.cpp  merge.cpp  ostrich.cpp  ostrich.ja.cpp  parrot.cpp  parrot.ja.cpp  phoenix.cpp  phoenix.ja.cpp  qiangbao.cpp  qiangbao.ja.cpp  rawcut.cpp  service_ostrich.cpp  service_parrot.cpp  service_phoenix.cpp  taskmerge.cpp  taskpool.cpp  train.cpp  trainmaster.cpp  urlcrawler.cpp  urlmerge.cpp  urlpool.cpp  wai.cpp  wordmaster.cpp
unicode/: cjk.js  furikana.js
utilities/: dictstorage.cpp  dictstorage.hpp  redis_entry.cpp  redis_entry.hpp  service_ostrich_entry.cpp  service_ostrich_fetch_task.cpp  service_ostrich_save_task.cpp  service_parrot_entry.cpp  service_parrot_fetch_task.cpp  service_parrot_save_task.cpp  service_phoenix_entry.cpp  service_phoenix_fetch_task.cpp  service_phoenix_save_task.cpp  taskmerge_entry.cpp  taskpool_entry.cpp  train_entry.cpp  train_fetch_task.cpp  train_master_entry.cpp  train_save_task.cpp  trainstorage.cpp  trainstorage.hpp  udp_entry.cpp  udp_entry.hpp  url_crawler_entry.cpp  url_crawler_fetch_task.cpp  url_crawler_save_task.cpp  url_merge_entry.cpp  url_pool_entry.cpp  urlstorage.cpp  urlstorage.hpp  word_master_entry.cpp
watorword/: api_entry.cpp  api_wai.cpp  charcut.cpp  charcut.db.cpp  charcut.hpp  ctrlclaw.cpp  ctrlclaw.hpp  dictmaster.cpp  dictmaster.hpp  dictstorage.cpp  dictstorage.hpp  ipfspump.cpp  ipfspump.hpp  log.cpp  log.hpp  ostrichword.cpp  ostrichword.db.cpp  ostrichword.hpp  parrotword.cpp  parrotword.db.cpp  parrotword.hpp  phoenixword.cpp  phoenixword.db.cpp  phoenixword.graph.cpp  phoenixword.hpp  qiangbaoword.cpp  qiangbaoword.db.cpp  qiangbaoword.hpp  redis_entry.cpp  redis_entry.hpp  taskmerge_entry.cpp  taskpool_entry.cpp  textpump.cpp  textpump.hpp  treeword.cpp  treeword.hpp  ttsmaster.cpp  ttsmaster.hpp  utf8.cpp  wikicrawler.cpp  (+12 more)
wiktionary/: Dockerfile  cn.run.sh  dict_cn.js  dict_ja.js  dict_ja_kan.js  docker-compose.yml  ja.run.sh  ja_kan.run.sh  package-lock.json  package.json  show.dict.js  wai.wiktionary.cn.service  wai.wiktionary.ja.service  wai.wiktionary.ja_kan.service  wikiDict.js  wikiDictJa.js  wikiDictJaKan.js  wikiDictKan.js  wordFromLevelDB.js
